<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/calculator"
        android:textSize="30sp"
        android:id="@+id/text_calc"/>
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_calc"
        app:layout_constraintEnd_toEndOf="parent"

        android:text="@string/num_0"
        android:textSize="24sp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/num_7"
        android:text="@string/num_7"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toEndOf="@id/num_7"
        android:id="@+id/num_8"
        android:text="@string/num_8"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toEndOf="@id/num_8"
        android:id="@+id/num_9"
        android:text="@string/num_9"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toEndOf="@id/num_9"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/num_div"
        android:text="@string/num_divide"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/num_7"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/num_4"
        android:text="@string/num_4"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/num_8"
        app:layout_constraintStart_toEndOf="@id/num_4"
        android:id="@+id/num_5"
        android:text="@string/num_5"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/num_9"
        app:layout_constraintStart_toEndOf="@id/num_5"
        android:id="@+id/num_6"
        android:text="@string/num_6"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/num_div"
        app:layout_constraintStart_toEndOf="@id/num_6"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/num_mult"
        android:text="@string/num_multi"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/num_4"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/num_1"
        android:text="@string/num_1"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/num_5"
        app:layout_constraintStart_toEndOf="@id/num_1"
        android:id="@+id/num_2"
        android:text="@string/num_2"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/num_6"
        app:layout_constraintStart_toEndOf="@id/num_2"
        android:id="@+id/num_3"
        android:text="@string/num_3"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/num_mult"
        app:layout_constraintStart_toEndOf="@id/num_3"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/num_plus"
        android:text="@string/num_plus"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/num_1"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/num_0"
        android:text="@string/num_0"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/num_2"
        app:layout_constraintStart_toEndOf="@id/num_1"
        android:id="@+id/num_demi"
        android:text="@string/num_demi"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/num_3"
        app:layout_constraintStart_toEndOf="@id/num_demi"
        android:id="@+id/num_C"
        android:text="@string/num_C"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/num_plus"
        app:layout_constraintStart_toEndOf="@id/num_C"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/num_minus"
        android:text="@string/num_minus"/>

    <Button
        android:id="@+id/num_equals"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:text="@string/num_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/num_0" />


</androidx.constraintlayout.widget.ConstraintLayout>